Added responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="w3-header">
             <h1 id="titleHeader">Talan Gaff</h1>
-            <img src="images/hamburgerButton.png" id="hamburgerButton" />
+            <a id="navIcon"><img src="images/hamburgerButton.png"/></a>
             <nav id="headerNav">
                 <ul>
                     <li><a href="" class="navLink">Home</a></li>
@@ -112,17 +112,19 @@
                 </div>
         </section>
         <footer>
-            <nav id="footerNav" class="w3-grid-padding" style="grid-template-columns: auto auto auto auto;">
+            <nav id="footerNav">
                 <!--<ul class="w3-grid">
                     <li><a href="" class="navLink">Home</a></li>
                     <li><a href="" class="w3-bar-item w3-mobile navLink">Resume</a></li>
                     <li><a href="" class="w3-bar-item w3-mobile navLink">Contact</a></li>
                     <li><a href="" class="w3-bar-item w3-mobile navLink">Interests</a></li>
                 </ul>-->
-                <div class="w3-padding"><a href="" class="navLink">Home</a></div>
-                <div class="w3-padding"><a href="" class="navLink">Resume</a></div>
-                <div class="w3-padding"><a href="" class="navLink">Contact</a></div>
-                <div class="w3-padding"><a href="" class="navLink">Interests</a></div>
+                <ul>
+                    <li><a href="" class="navLink">Home</a></li>
+                    <li><a href="" class="navLink">Resume</a></li>
+                    <li><a href="" class="navLink">Contact</a></li>
+                    <li><a href="" class="navLink">Interests</a></li>
+                </ul>
             </nav>
             <p>&copy; 2025 Talan Gaff. All rights reserved.</p>
         </footer>
