--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <a id="navIcon"><img src="images/hamburgerButton.png"/></a>
             <nav id="headerNav">
                 <ul>
-                    <li><a href="" class="navLink">Home</a></li>
-                    <li><a href="" class="navLink">Resume</a></li>
-                    <li><a href="" class="navLink">Contact</a></li>
-                    <li><a href="" class="navLink">Interests</a></li>
+                    <li><a href="" class="navLink">About Me</a></li>
+                    <li><a href="pages/resume.html" class="navLink">Resume</a></li>
+                    <li><a href="pages/contact.html" class="navLink">Contact</a></li>
+                    <li><a href="pages/interests.html" class="navLink">Interests</a></li>
                 </ul>
             </nav>
         </header>
@@ -120,10 +120,10 @@
                     <li><a href="" class="w3-bar-item w3-mobile navLink">Interests</a></li>
                 </ul>-->
                 <ul>
-                    <li><a href="" class="navLink">Home</a></li>
-                    <li><a href="" class="navLink">Resume</a></li>
-                    <li><a href="" class="navLink">Contact</a></li>
-                    <li><a href="" class="navLink">Interests</a></li>
+                    <li><a href="" class="navLink">About Me</a></li>
+                    <li><a href="pages/resume.html" class="navLink">Resume</a></li>
+                    <li><a href="pages/contact.html" class="navLink">Contact</a></li>
+                    <li><a href="pages/interests.html" class="navLink">Interests</a></li>
                 </ul>
             </nav>
             <p>&copy; 2025 Talan Gaff. All rights reserved.</p>
