--- a/pages/interests.html
+++ b/pages/interests.html
@@ -6,8 +6,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" href="css/w3.css" />
-        <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="../css/w3.css" />
+        <link rel="stylesheet" href="../css/styles.css" />
     </head>
 
     <body>
@@ -28,7 +28,7 @@
                 <h1>About Me</h1>
                 </div>
                 <div id="column2">
-                    <img src="images/me.png" alt="Photo of Talan Gaff" id="sideBarPhoto" />
+                    <img src="../images/me.png" alt="Photo of Talan Gaff" id="sideBarPhoto" />
                     <div id="sideBarContent">
                         <h2>Mini-Biography</h2>
                     </div>
