Added About Me and Mini-Biography content

--- a/index.html
+++ b/index.html
@@ -26,99 +26,54 @@
         <section id="mainContent">
             <div id="column1">
                 <h1>About Me</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                    Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                    In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                    aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                    nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                    integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>
+                    Hello! My name is Talan Gaff. I am currently studing programming, and I plan to pursue a career in the development field one day. The process
+                    of learning has been not only fun and exhilerating, but also somewhat stressful and difficult. The process of finding problems and solving them
+                    has always been something that I enjoy doing. I love the dopamine rush that is received from finally finding the solution to a development issue
+                    that has taken a long time to fix. This feeling is what causes me to continue wanting to learn more about different programming languages and
+                    how they can be used to solve problems.
+                </p>
+                <p>
+                    I am very happy to be in the place that I am today. Of course I have had some struggles in my life, but without the problems I would not be where I am
+                    today. My family was affected by the wildfires in Gatlinburg of 2016. These fires completely destroyed our house and everything we owned. This caused
+                    a major setback on our lives because nearly everything we had was gone. This issue caused my family a lot of stress and problems, but we were able to
+                    find a place to stay while we rebuilt our house. Although this situation was very devastating for my family and many others, we have thankfully been
+                    able to overcome the challenge that came our way.
+                </p>
+                <p>
+                    The most important things to me in my life are my family, my friends, my girlfriend, Jesus, and my church. These things have all gotten me to where
+                    I am today in many different ways. My relationships with these people have positively impacted my life through their love and motivation that they have
+                    given me. Without them, I would be in a completely different place in my life, so I am very grateful to have them.
+                </p>
+                <p>
+                    I enjoy learning new things as much as I can. I am always trying to learn more about the things that are around me. My curiosity has caused me to
+                    find new things that I enjoy. I always try my best to keep myself open to new thoughts and ideas. This allows me to understand more about different things
+                    that I may not currently know much about.
+                </p>
+                <p>
+                    Thanks for reading about me! I hope you learned something about me that you didn't already know!
+                </p>
                 </div>
                 <div id="column2">
-                    <img src="images/me.png" alt="Photo of Talan Gaff" id="sideBarPhoto" />
+                    <img src="images/me.jpeg" alt="Photo of Talan Gaff" id="sideBarPhoto" />
                     <div id="sideBarContent">
                         <h2>Mini-Biography</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                            Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                            In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                            aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                            nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                            integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                            sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                            Quisque faucibus ex sapien vitae pellentesque sem placerat.
-                            In id cursus mi pretium tellus duis convallis. Tempus leo eu
-                            aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus
-                            nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
-                            integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                            sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                        <p>
+                            I currently live in Sevierville, Tennessee, where I have lived for over eight years. I am studying at Walters-State Community College
+                            located in Morristown, Tennessee. I am passionate about programming and cybersecurity, which I am currently studying. My current 
+                            biggest goals are to have my COMPTIA Security+ Certification by the end of the year and to build up a solid development portfolio.
+                            I have been interested in programming for nearly seven years, which is what lead me to wanting to pursue it at a more advanced level.
+                        </p>
+                        <p>
+                            Being interested in development for such a long period of time has significantly improved my learning. It has made it much easier for
+                            me to understand certain concepts that may take a beginner a longer amount of time to grasp. I hope to continue having the same passion
+                            for the field that I have now. I plan on potentially working in the field for the rest of my working life.
+                        </p>
                     </div>
                 </div>
         </section>
         <footer>
             <nav id="footerNav">
-                <!--<ul class="w3-grid">
-                    <li><a href="" class="navLink">Home</a></li>
-                    <li><a href="" class="w3-bar-item w3-mobile navLink">Resume</a></li>
-                    <li><a href="" class="w3-bar-item w3-mobile navLink">Contact</a></li>
-                    <li><a href="" class="w3-bar-item w3-mobile navLink">Interests</a></li>
-                </ul>-->
                 <ul>
                     <li><a href="" class="navLink">About Me</a></li>
                     <li><a href="pages/resume.html" class="navLink">Resume</a></li>
