Added about.html page and added about page button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <a id="navIcon"><img src="images/hamburgerButton.png"/></a>
             <nav id="headerNav">
                 <ul>
-                    <li><a href="" class="navLink">About Me</a></li>
+                    <li><a href="" class="navLink">Home</a></li>
+                    <li><a href="pages/about.html" class="navLink">About</a></li>
                     <li><a href="pages/resume.html" class="navLink">Resume</a></li>
                     <li><a href="pages/contact.html" class="navLink">Contact</a></li>
                     <li><a href="pages/interests.html" class="navLink">Interests</a></li>
@@ -27,7 +28,7 @@
             <div id="column1">
                 <h1>About Me</h1>
                 <p>
-                    Hello! My name is Talan Gaff. I am currently studing programming, and I plan to pursue a career in the development field one day. The process
+                    Hello! My name is Talan Gaff. I am currently studying programming, and I plan to pursue a career in the development field one day. The process
                     of learning has been not only fun and exhilerating, but also somewhat stressful and difficult. The process of finding problems and solving them
                     has always been something that I enjoy doing. I love the dopamine rush that is received from finally finding the solution to a development issue
                     that has taken a long time to fix. This feeling is what causes me to continue wanting to learn more about different programming languages and
@@ -75,7 +76,8 @@
         <footer>
             <nav id="footerNav">
                 <ul>
-                    <li><a href="" class="navLink">About Me</a></li>
+                    <li><a href="" class="navLink">Home</a></li>
+                    <li><a href="pages/about.html" class="navLink">About</a></li>
                     <li><a href="pages/resume.html" class="navLink">Resume</a></li>
                     <li><a href="pages/contact.html" class="navLink">Contact</a></li>
                     <li><a href="pages/interests.html" class="navLink">Interests</a></li>
