--- a/pages/resume.html
+++ b/pages/resume.html
@@ -13,13 +13,14 @@
     <body>
         <header class="w3-header">
             <h1 id="titleHeader">Talan Gaff</h1>
-            <a id="navIcon"><img src="images/hamburgerButton.png"/></a>
+            <a id="navIcon"><img src="../images/hamburgerButton.png"/></a>
             <nav id="headerNav">
                 <ul>
-                    <li><a href="../index.html" class="navLink">About Me</a></li>
+                    <li><a href="../index.html" class="navLink">Home</a></li>
+                    <li><a href="about.html" class="navLink">About</a></li>
                     <li><a href="resume.html" class="navLink">Resume</a></li>
-                    <li><a href="contact.html" class="navLink">Contact</a></li>
                     <li><a href="interests.html" class="navLink">Interests</a></li>
+                    <li><a href="contact.html" class="navLink">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,10 +38,11 @@
         <footer>
             <nav id="footerNav">
                 <ul>
-                    <li><a href="../index.html" class="navLink">About Me</a></li>
+                    <li><a href="../index.html" class="navLink">Home</a></li>
+                    <li><a href="about.html" class="navLink">About</a></li>
                     <li><a href="resume.html" class="navLink">Resume</a></li>
-                    <li><a href="contact.html" class="navLink">Contact</a></li>
                     <li><a href="interests.html" class="navLink">Interests</a></li>
+                    <li><a href="contact.html" class="navLink">Contact</a></li>
                 </ul>
             </nav>
             <p>&copy; 2025 Talan Gaff. All rights reserved.</p>
