Modified Contact page text

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,14 +26,8 @@
         </header>
         <section id="mainContent">
             <div id="column1">
-                <h1>About Me</h1>
-                </div>
-                <div id="column2">
-                    <img src="../images/me.png" alt="Photo of Talan Gaff" id="sideBarPhoto" />
-                    <div id="sideBarContent">
-                        <h2>Mini-Biography</h2>
-                    </div>
-                </div>
+                <h1>Contact Me</h1>
+            </div>
         </section>
         <footer>
             <nav id="footerNav">
