--- a/pages/resume.html
+++ b/pages/resume.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="../css/w3.css" />
         <link rel="stylesheet" href="../css/styles.css" />
+        <link rel="stylesheet" href="../css/resume.css" />
     </head>
 
     <body>
@@ -25,15 +26,60 @@
             </nav>
         </header>
         <section id="mainContent">
-            <div id="column1">
-                <h1>About Me</h1>
-                </div>
-                <div id="column2">
-                    <img src="../images/me.png" alt="Photo of Talan Gaff" id="sideBarPhoto" />
-                    <div id="sideBarContent">
-                        <h2>Mini-Biography</h2>
-                    </div>
-                </div>
+            <div id="resume">
+                <h1>Talan Gaff</h1>
+                <h2>5011 Riversong Way Sevierville, TN 37876 | <a href="mailto:talangaff@gmail.com">talangaff@gmail.com</a> | <a href="tel:8653930837">(865) 393-0837</a></h2>
+                <h2><a href="https://github.com/talangaff" target="_blank"><img src="../images/githubLogo.png" id="githubLogo">Github</a></h2>
+                <section id="mainSection">
+                    <h3 class="sectionHeader">Education</h3>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Walter's State Community College</span><span class="right">Morristown, TN</span></p>
+                        <p><span class="left">AAS Programming</span><span class="right">May 2026</span></p>
+                        <p><span class="left"><strong>Relevant Coursework:</strong> Database Concepts, Introductory Programming, Computer Science, Front-End Web Development, UNIX/Linux</span></p>
+                    </section>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Bethel School of Technology</span><span class="right">Redding, CA</span></p>
+                        <p><span class="left">Cybersecurity Certificate</span><span class="right">June 2025</span></p>
+                        <p><span class="left"><strong>Relevant Coursework:</strong> Linux, Virtual Machines, Secure Programming, Web Security, Networking, Security Principles, Threats and Vulnerabilities</span></p>
+                    </section>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Gatlinburg-Pittman High School</span><span class="right">Gatlinburg, TN</span></p>
+                        <p><span class="left"><strong>GPA:</strong> 3.9 <strong>ACT:</strong> 32</span><span class="right">May 2024</span></p>
+                    </section>
+
+                    <h3 class="sectionHeader">Skills and Attributes</h3>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Key Skills</span></p>
+                        <p><span class="left">Structured Programming, Database Design and Development, Object-Oriented Programming, Problem Solving</span></p>
+                    </section>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Languages</span></p>
+                        <p><span class="left">Python, HTML, CSS, JavaScript, SQL, Lua</span></p>
+                    </section>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Technologies</span></p>
+                        <p><span class="left">SQL Server, Git</span></p>
+                    </section>
+
+                    <h3 class="sectionHeader">Employement</h3>
+
+                    <section class="itemSection">
+                        <p><span class="bold left">Food City Supermarkets</span><span class="right">Gatlinburg, TN</span></p>
+                        <p><span class="bold left">Courtesy Clerk</span><span class="right">June 2020 - May 2024</span></p>
+                        <ul>
+                            <li>Trained new employees to help them understand the tasks they needed to complete and how they should go about completing them</li>
+                            <li>Assisted customers with their groceries to help them feel welcomed in the store</li>
+                            <li>Cleaned messes in the store to ensure a good shopping experience for all customers</li>
+                        </ul>
+                    </section>
+                </section>
+            </div>
         </section>
         <footer>
             <nav id="footerNav">
