--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,7 @@
         <section id="mainContent">
             <div id="column1">
                 <h1>Contact Me</h1>
+                <p>Coming Soon.</p>
             </div>
         </section>
         <footer>
