Interests page added and styled

--- a/pages/interests.html
+++ b/pages/interests.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="../css/w3.css" />
         <link rel="stylesheet" href="../css/styles.css" />
+        <link rel="stylesheet" href="../css/interests.css" />
     </head>
 
     <body>
@@ -24,17 +25,39 @@
                 </ul>
             </nav>
         </header>
+
         <section id="mainContent">
-            <div id="column1">
-                <h1>About Me</h1>
-                </div>
-                <div id="column2">
-                    <img src="../images/me.png" alt="Photo of Talan Gaff" id="sideBarPhoto" />
-                    <div id="sideBarContent">
-                        <h2>Mini-Biography</h2>
-                    </div>
-                </div>
+            <h1>My Interests</h1>
+            <p>Listed below are some things that I am interested in. They are listed in no particular order.</p>
+        
+            <section id="interestImages">
+                <figure>
+                    <img src="../images/churchInterest.jpg">
+                    <figcaption>Church<br>I enjoy going to church every Sunday and participating in events with the Young Adults group</figcaption>
+                </figure>
+                <figure>
+                    <img src="../images/programmingImage.jpg">
+                    <figcaption>Programming<br>I enjoy programming different things to complete certain tasks in languages such as C#, Python, and JavaScript</figcaption>
+                </figure>
+                <figure>
+                    <img src="../images/readingInterest.jpg">
+                    <figcaption>Reading<br>I enjoy reading nonfiction books that help me to better myself and learn more about specific things</figcaption>
+                </figure>
+                <figure>
+                    <img src="../images/fishingInterest.jpg">
+                    <figcaption>Fishing<br>I enjoy fishing in my free time to clear my mind and help me improve healthy dopamine in my life</figcaption>
+                </figure>
+                <figure>
+                    <img src="../images/bikingInterest.jpg">
+                    <figcaption>Biking<br>I enjoy biking because it allows me to get physical exercise while also having fun in the process</figcaption>
+                </figure>
+                <figure>
+                    <img src="../images/weightLiftingInterest.jpg">
+                    <figcaption>Weight Lifting<br>I enjoy lifting weights to improve my health and physical strength</figcaption>
+                </figure>
+            </section>
         </section>
+
         <footer>
             <nav id="footerNav">
                 <ul>
