Added About page content and styling

--- a/index.html
+++ b/index.html
@@ -26,20 +26,13 @@
         </header>
         <section id="mainContent">
             <div id="column1">
-                <h1>About Me</h1>
+                <h1>Introduction</h1>
                 <p>
                     Hello! My name is Talan Gaff. I am currently studying programming, and I plan to pursue a career in the development field one day. The process
                     of learning has been not only fun and exhilerating, but also somewhat stressful and difficult. The process of finding problems and solving them
                     has always been something that I enjoy doing. I love the dopamine rush that is received from finally finding the solution to a development issue
                     that has taken a long time to fix. This feeling is what causes me to continue wanting to learn more about different programming languages and
                     how they can be used to solve problems.
-                </p>
-                <p>
-                    I am very happy to be in the place that I am today. Of course I have had some struggles in my life, but without the problems I would not be where I am
-                    today. My family was affected by the wildfires in Gatlinburg of 2016. These fires completely destroyed our house and everything we owned. This caused
-                    a major setback on our lives because nearly everything we had was gone. This issue caused my family a lot of stress and problems, but we were able to
-                    find a place to stay while we rebuilt our house. Although this situation was very devastating for my family and many others, we have thankfully been
-                    able to overcome the challenge that came our way.
                 </p>
                 <p>
                     The most important things to me in my life are my family, my friends, my girlfriend, Jesus, and my church. These things have all gotten me to where
@@ -52,7 +45,7 @@
                     that I may not currently know much about.
                 </p>
                 <p>
-                    Thanks for reading about me! I hope you learned something about me that you didn't already know!
+                    Thanks for reading about me! I hope you learned something about me that you didn't already know! Check out the <a href="pages/about.html">About</a> page to learn more about me!
                 </p>
                 </div>
                 <div id="column2">
