--- a/pages/resume.html
+++ b/pages/resume.html
@@ -28,7 +28,7 @@
         <section id="mainContent">
             <div id="resume">
                 <h1>Talan Gaff</h1>
-                <h2>5011 Riversong Way Sevierville, TN 37876 | <a href="mailto:talangaff@gmail.com">talangaff@gmail.com</a> | <a href="tel:8653930837">(865) 393-0837</a></h2>
+                <h2><a href="mailto:talangaff@gmail.com">talangaff@gmail.com</a> | <a href="tel:8653930837">(865) 393-0837</a></h2>
                 <h2><a href="https://github.com/talangaff" target="_blank"><img src="../images/githubLogo.png" id="githubLogo">Github</a></h2>
                 <section id="mainSection">
                     <h3 class="sectionHeader">Education</h3>
