--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div id="flag-container" class="d-flex justify-content-around mt-4 gx-5 flex-wrap">
                 <div class="p-2 m-3">
                     <h2 class="flag-number">Flag 1</h2>
-                    <h3 class="flag-info">Decryption</h3>
+                    <h3 class="flag-info">Decoding</h3>
                     <h3 class="easy">Easy</h3>
                     <a href="pages/flag1.html" class="flag-button bg-primary">Attempt Flag 1</a>
                 </div>
                 <div class="p-2 m-3">
                     <h2 class="flag-number">Flag 2</h2>
-                    <h3 class="flag-info">Bash</h3>
+                    <h3 class="flag-info">Programming</h3>
                     <h3 class="medium">Medium</h3>
                     <a href="pages/flag2.html" class="flag-button bg-primary">Attempt Flag 2</a>
                 </div>
                 <div class="p-2 m-3">
                     <h2 class="flag-number">Flag 3</h2>
-                    <h3 class="flag-info">Unlisted</h3>
+                    <h3 class="flag-info">Analysis</h3>
                     <h3 class="hard">Hard</h3>
                     <a href="pages/flag3.html" class="flag-button bg-primary">Attempt Flag 3</a>
                 </div>
