--- a/pages/flag3.html
+++ b/pages/flag3.html
@@ -12,6 +12,9 @@
 
         <!--Styles-->
         <link rel="stylesheet" href="../css/flag-styles.css">
+
+        <!--JS-->
+        <script src="../js/flags.js" defer></script>
     </head>
 
     <body>
@@ -24,7 +27,18 @@
             
             <div id="flag-content">
                 <h1>Flag 3</h1>
+                <p>Our organization's cybersecurity analysts noticed some strange behaviour on the network. Analyze the file and see if you can find anything suspicious.</p>
+                <a href="../downloads/HardFlag.pcapng" download><button type="button" id="download-button">Download File</button></a>
             </div>
+
+            <div id="submit-flag">
+                <label for="flag-input">Enter Flag</label>
+                <input type="text" id="flag-input" placeholder="flag{*****_*****_******}">
+                <button type="button" id="submit-flag-button">Submit Flag</button>
+                <strong><p id="submit-message"></p></strong>
+                <a href="flag2.html"><button type="button" id="previous-flag" class="bg-primary">Previous Flag</button></a>
+            </div>
+
         </main>
     </body>
 </html>
