--- a/pages/flag1.html
+++ b/pages/flag1.html
@@ -27,7 +27,7 @@
             
             <div id="flag-content">
                 <h1>Flag 1</h1>
-                <p>We have found an encrypted string during our penetration testing. Decrypt it to find the flag:<br><strong>Ec4uB45AFmcClBkIoBhwuke30aT</strong></p>
+                <p>We have found an encoded string during our penetration testing. Decode it to find the flag:<br><strong>2RmC5ownuDhQQiXEeNRX1mXam8NG</strong></p>
             </div>
 
             <div id="submit-flag">
